--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "#mango",
+  "name": "Clear",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -22,7 +22,8 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
-    "react-native-tab-view": "^2.14.4"
+    "react-native-tab-view": "^2.14.4",
+    "react-native-vector-icons": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
